Fix on Mobile for Back Button

--- a/style/main.css
+++ b/style/main.css
@@ -424,9 +424,9 @@ textarea{
     float:right;
     background:rgb(0, 255, 106);
     height:4vh;
-    width:10vw;
+    width:15vw;
     border-radius:12px;
-    font-size: 1.2vw;
+    font-size: 1.5vh;
     color: white;
     cursor: pointer;
     border-style: none;
@@ -512,6 +512,10 @@ textarea{
 
     input {
         width: calc(100% - 2em);
+    }
+
+    .info-contain {
+        padding: 5%;
     }
 }
 
